tests/blackbox_tests/python-brace-format-string-msgid-error.pot
# E: python-brace-format-string-error msgid 'A quick brown fox jumps over the lazy dog}': invalid replacement field specification '}'

#, fuzzy
msgid ""
msgstr ""
"Project-Id-Version: Gizmo Enhancer 1.0\n"
"Report-Msgid-Bugs-To: gizmoenhancer@jwilk.net\n"
"POT-Creation-Date: 2012-11-01 14:42+0100\n"
"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
"Language-Team: LANGUAGE <LL@li.org>\n"
"Language: \n"
"MIME-Version: 1.0\n"
"Content-Type: text/plain; charset=CHARSET\n"
"Content-Transfer-Encoding: 8bit\n"

#, python-brace-format
msgid "A quick brown fox jumps over the lazy dog}"
msgstr ""
